# PyProjects

./: LICENSE.md  README.md  main.py  new_project.json  setup.cfg  setup.py
PyProjects/: pyprojects.py
PyProjects/config/: __init__.py  default_init.txt  default_license.txt  pyconfig.py
Tests/: tests.py
Tests/test_proj/: LICENSE.md  main.py  pyproject.toml  setup.cfg  setup.py
