[metadata]
# replace with your username:
name = PyProjects-behronsresume
version = 0.0.1
author = behronsresume
author_email = behronsresume@gmail.com
description = Create a project with this tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BResume/pyprojects
project_urls =
    Bug Tracker = https://github.com/BResume/pyprojects/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = 
    >=3.6
[options.packages.find]
where = 'PyProjects'