
[metadata]
# replace with your username:
name = {0}
version = {1}
author = {2}
author_email = {3}
description = {4}
long_description = {5}
long_description_content_type = {6}
url = {7}
project_urls =
    {8}
classifiers =
    {9}

[options]
package_dir = {10}
packages = {11}
python_requires = 
    {12}
[options.packages.find]
where = {13}
        